# major_final

./: CMakeLists.txt  README.md
include/: astar.hpp  evaluator.hpp  greedy.hpp  imgprocess.hpp  pathplan.hpp  pathtoworld.hpp  start.hpp
map/: carto_map.psd
resources/: Environment map.mtl  Environment map.sat  Environment map.stl  ~$机器人全覆盖轨迹规划任务书_2025.docx  扫地机器人全覆盖轨迹规划任务书_2025.docx
src/: astar.cpp  evaluator.cpp  greedy.cpp  imgprocess.cpp  main.cpp  pathplan.cpp  pathtoworld.cpp  start.cpp
test/: test.cpp
